<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jumpbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zxcv9141@naver.com">mosiwon</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>walle_description</exec_depend>
  <exec_depend>rviz</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
